--- a/history.html
+++ b/history.html
@@ -53,7 +53,7 @@
 						</span>
 						<span class = "line-break1"></span>
 							<figure class = "left">
-							<img class = "left school" src = "images/jg.jpg" alt = "photo of J.G. Workman"/>
+							<img class = "left school" src = "images/selwyn.jpg" alt = "photo of J.G. Workman"/>
 							<figcaption class = "left caption">My first school: J.G. Workman P.S.</figcaption>
 							</figure>
 						<span class = "line-break">
