--- a/references.html
+++ b/references.html
@@ -39,30 +39,34 @@
 						N/a means there wasn't a corresponding date or name from the place I got the image from.
 					</span>
 					<span class = "line-break">
-						NuclearVacuum, U. (2009, July 19). Flag-map of the People's Republic of China [Digital image]. Retrieved November 17, 2020, from 
-						https://commons.wikimedia.org/wiki/File:Flag-map_of_the_People%27s_Republic_of_China.svg
+						DEKI, K. (2020, April 14). Osaka - 15 Must See Spots, Both Famous And Little Known: MATCHA - JAPAN TRAVEL WEB MAGAZINE. 
+						Retrieved November 17, 2020, from https://matcha-jp.com/en/5841
 					</span>
 					<span class = "line-break">
 						FreshCorp619, U. (2005, June 2). J.G. Workman Public School. Retrieved November 17, 2020, from https://commons.wikimedia.org/wiki/File:J.G._Workman_Public_School.JPG
-					</span>
-					<span class = "line-break">
-						N/a, N. (n/a). Selwyn. Retrieved November 17, 2020, from https://schoolweb.tdsb.on.ca/selwyn/
 					</span>
 					<span class = "line-break">
 						Milley, D. (2012, January 09). Community bands together to keep school pool afloat. Retrieved November 17, 2020, from 
 						https://www.toronto.com/news-story/70751-community-bands-together-to-keep-school-pool-afloat/
 					</span>
 					<span class = "line-break">
-						N/a, N. (2020, April 30). Munich, Germany: Definitive guide for senior travellers. Retrieved November 17, 2020, from 
-						https://www.odysseytraveller.com/articles/munich-germany/
+						N/a, N. (n/a). Selwyn. Retrieved November 17, 2020, from https://schoolweb.tdsb.on.ca/selwyn/
 					</span>
 					<span class = "line-break">
 						N/a, N. (2019, March 27). City Highlight: Beijing. Retrieved November 17, 2020, from 
 						https://www.worldtravelguide.net/features/city-highlight/city-highlight-beijing/
 					</span>
 					<span class = "line-break">
-						DEKI, K. (2020, April 14). Osaka - 15 Must See Spots, Both Famous And Little Known: MATCHA - JAPAN TRAVEL WEB MAGAZINE. 
-						Retrieved November 17, 2020, from https://matcha-jp.com/en/5841
+						N/a, N. (2020, April 30). Munich, Germany: Definitive guide for senior travellers. Retrieved November 17, 2020, from 
+						https://www.odysseytraveller.com/articles/munich-germany/
+					</span>
+					<span class = "line-break">
+						NuclearVacuum, U. (2009, July 19). Flag-map of the People's Republic of China [Digital image]. Retrieved November 17, 2020, from 
+						https://commons.wikimedia.org/wiki/File:Flag-map_of_the_People%27s_Republic_of_China.svg
+					</span>
+					<span class = "line-break">
+						Whitmore, J. (n/a). J G Workman Public School, 487 Birchmount Rd, Scarborough, ON M1K 1N7, Canada. Retrieved November 17, 2020, 
+						from https://canada247.info/explore/ontario/toronto_division/toronto/scarborough/j-g-workman-public-school-416-396-6365.html
 					</span>
 				</td>
 			</tr>
