--- a/hobbies.html
+++ b/hobbies.html
@@ -327,6 +327,17 @@
 						</span>
 						<span class = "line-break1"></span>
 						<a class = "jump" href = "#top">Back to top</a>
+						<span class = "line-break1"></span>
+						<a
+						href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F/">
+						<img class = "validate-img" id = "html-validate" src="images/w3cHTML.png"
+						alt="HTML5 with CSS3 and Semantics">
+						</a>
+						<a
+						href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F/">
+						<img class = "validate-img" src="images/w3cCSS.png"
+						alt="HTML5 with CSS3 and Semantics">
+						</a>
 					</div>
 				</td>
 			</tr>
