--- a/index.html
+++ b/index.html
@@ -50,7 +50,19 @@
 						<li>Pok&eacute;mon Black and White is the best one</li>
 					</ul>
 					</div>
+					<a
+					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F/">
+					<img class = "validate-img" id = "html-validate" src="images/w3cHTML.png"
+					alt="HTML5 with CSS3 and Semantics">
+					</a>
+					<a
+					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F/">
+					<img class = "validate-img" src="images/w3cCSS.png"
+					alt="HTML5 with CSS3 and Semantics">
+					</a>
 				</td>
+			</tr>
+			<tr>
 			</tr>
 		</table>
 	</body>
