--- a/aspirations.html
+++ b/aspirations.html
@@ -83,6 +83,17 @@
 					</span>
 					<span class = "line-break"></span>
 					<a class = "jump" href = "#top">Back to top</a>
+					<span class = "line-break1"></span>
+					<a
+					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2Faspirations.html">
+					<img class = "validate-img" id = "html-validate" src="images/w3cHTML.png"
+					alt="HTML5 with CSS3 and Semantics">
+					</a>
+					<a
+					href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Faimeeseto.github.io%2Fhome%2Faspirations.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+					<img class = "validate-img" src="images/w3cCSS.png"
+					alt="HTML5 with CSS3 and Semantics">
+					</a>
 				</td>
 			</tr>
 		</table>
