--- a/index.html
+++ b/index.html
@@ -56,13 +56,11 @@
 					alt="HTML5 with CSS3 and Semantics">
 					</a>
 					<a
-					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F/">
+					href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 					<img class = "validate-img" src="images/w3cCSS.png"
 					alt="HTML5 with CSS3 and Semantics">
 					</a>
 				</td>
-			</tr>
-			<tr>
 			</tr>
 		</table>
 	</body>
