--- a/references.html
+++ b/references.html
@@ -68,6 +68,17 @@
 						Whitmore, J. (n/a). J G Workman Public School, 487 Birchmount Rd, Scarborough, ON M1K 1N7, Canada. Retrieved November 17, 2020, 
 						from https://canada247.info/explore/ontario/toronto_division/toronto/scarborough/j-g-workman-public-school-416-396-6365.html
 					</span>
+					<span class = "line-break1"></span>
+					<a
+					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2Freferences.html">
+					<img class = "validate-img" id = "html-validate" src="images/w3cHTML.png"
+					alt="HTML5 with CSS3 and Semantics">
+					</a>
+					<a
+					href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Faimeeseto.github.io%2Fhome%2Faspirations.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+					<img class = "validate-img" src="images/w3cCSS.png"
+					alt="HTML5 with CSS3 and Semantics">
+					</a>
 				</td>
 			</tr>
 		</table>
