--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 					</ul>
 					</div>
 					<a
-					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F/">
+					href="https://validator.w3.org/nu/?doc=https%3A%2F%2Faimeeseto.github.io%2Fhome%2F">
 					<img class = "validate-img" id = "html-validate" src="images/w3cHTML.png"
 					alt="HTML5 with CSS3 and Semantics">
 					</a>
