--- a/references.html
+++ b/references.html
@@ -74,7 +74,7 @@
 					alt="HTML5 with CSS3 and Semantics">
 					</a>
 					<a
-					href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Faimeeseto.github.io%2Fhome%2Faspirations.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
+					href="https://jigsaw.w3.org/css-validator/validator?uri=https%3A%2F%2Faimeeseto.github.io%2Fhome%2Freferences.html&profile=css3svg&usermedium=all&warning=1&vextwarning=&lang=en">
 					<img class = "validate-img" src="images/w3cCSS.png"
 					alt="HTML5 with CSS3 and Semantics">
 					</a>
